unpackaged/main/default/objects/Contact/fields/Clarizen_ID__c.field-meta.xml
<CustomField>
    <fullName>Clarizen_ID__c</fullName>
    <description>Used for Data Migration and Plan D ERP Integration.</description>
    <label>Clarizen ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>