unpackaged/main/default/objects/Contact/fields/Disqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Reason__c</fullName>
    <label>Disqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project Cancelled</fullName>
            </value>
            <value>
                <fullName>Project Delayed</fullName>
            </value>
            <value>
                <fullName>Poor fit</fullName>
            </value>
            <value>
                <fullName>No interest</fullName>
            </value>
            <value>
                <fullName>Not Decision Maker</fullName>
            </value>
            <value>
                <fullName>Unable to contact</fullName>
            </value>
            <value>
                <fullName>Insufficient Budget</fullName>
            </value>
            <value>
                <fullName>Not ready to buy</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>