unpackaged/main/default/objects/Contact/fields/FortX_ID__c.field-meta.xml
<CustomField>
    <fullName>FortX_ID__c</fullName>
    <description>Used by Integration and Migration with MyFortex data.</description>
    <externalId>true</externalId>
    <label>FortX ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>