unpackaged/main/default/objects/Contact/fields/Hubspot_Number_of_ERP_Users_Bandings__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Number_of_ERP_Users_Bandings__c</fullName>
    <description>Number of users today or expected number of users.</description>
    <label>Hubspot - Number of ERP Users Bandings</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - 10</fullName>
            </value>
            <value>
                <fullName>10 - 20</fullName>
            </value>
            <value>
                <fullName>20 - 40</fullName>
            </value>
            <value>
                <fullName>40 - 60</fullName>
            </value>
            <value>
                <fullName>60 - 100</fullName>
            </value>
            <value>
                <fullName>100 - 300</fullName>
            </value>
            <value>
                <fullName>300 +</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>