unpackaged/main/default/objects/Contact/fields/Marketing_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Opt_In__c</fullName>
    <label>Marketing Opt In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>