unpackaged/main/default/objects/Contact/fields/Marketing_Phone_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Phone_Opt_In__c</fullName>
    <description>CRM-1629</description>
    <inlineHelpText>This field is auto-populated from Pardot based on contact responses.</inlineHelpText>
    <label>Marketing Phone Opt In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>