unpackaged/main/default/objects/Contact/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <label>Opportunity Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Opportunity</fullName>
            </value>
            <value>
                <fullName>Open Opportunity</fullName>
            </value>
            <value>
                <fullName>Pending Renewal</fullName>
            </value>
            <value>
                <fullName>Nurture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>