unpackaged/main/default/objects/Contact/fields/Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest__c</fullName>
    <label>Product Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jeeves</fullName>
            </value>
            <value>
                <fullName>OrderWise</fullName>
            </value>
            <value>
                <fullName>123Insight</fullName>
            </value>
            <value>
                <fullName>SYLOB</fullName>
            </value>
            <value>
                <fullName>SILOG</fullName>
            </value>
            <value>
                <fullName>Clipper</fullName>
            </value>
            <value>
                <fullName>Helios</fullName>
            </value>
            <value>
                <fullName>ProConcept</fullName>
            </value>
            <value>
                <fullName>ABAS</fullName>
            </value>
            <value>
                <fullName>MyFactory</fullName>
            </value>
            <value>
                <fullName>BPSC</fullName>
            </value>
            <value>
                <fullName>GARP</fullName>
            </value>
            <value>
                <fullName>Forterro</fullName>
            </value>
            <value>
                <fullName>Fortee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>