unpackaged/main/default/objects/Contact/fields/pse__Resource_Role__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource_Role__c</fullName>
    <label>Resource Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Consultant (Finance)</fullName>
            </value>
            <value>
                <fullName>Consultant (HR)</fullName>
            </value>
            <value>
                <fullName>Consultant (Infrastructure)</fullName>
            </value>
            <value>
                <fullName>Consultant (Logistic Production)</fullName>
            </value>
            <value>
                <fullName>Consultant (Managed Services)</fullName>
            </value>
            <value>
                <fullName>Consultant (Principal)</fullName>
            </value>
            <value>
                <fullName>Customer Success Manager</fullName>
            </value>
            <value>
                <fullName>Database Engineer</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Education Services</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Project Coordinator</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Solution Architect</fullName>
            </value>
            <value>
                <fullName>Team Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>