unpackaged/main/default/objects/Contact/fields/Role_Level__c.field-meta.xml
<CustomField>
    <fullName>Role_Level__c</fullName>
    <label>Role Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Associate</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Senior</fullName>
            </value>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>Senior Principal</fullName>
            </value>
            <value>
                <fullName>Fellow</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Team Lead</fullName>
            </value>
            <value>
                <fullName>Senior Lead</fullName>
            </value>
            <value>
                <fullName>C-Suite</fullName>
            </value>
            <value>
                <fullName>VP</fullName>
            </value>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Senior Administrator</fullName>
            </value>
            <value>
                <fullName>SVP</fullName>
            </value>
            <value>
                <fullName>Principal Administrator</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>Coordinator Administrator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>