unpackaged/main/default/objects/Contact/fields/SIC_Code_Category__c.field-meta.xml
<CustomField>
    <fullName>SIC_Code_Category__c</fullName>
    <label>SIC Code Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01 - Agricultural Production - Crops</fullName>
            </value>
            <value>
                <fullName>02 - Agricultural Production - Livestock &amp; Animal Specialities</fullName>
            </value>
            <value>
                <fullName>07 - Agricultural Services</fullName>
            </value>
            <value>
                <fullName>08 - Forestry</fullName>
            </value>
            <value>
                <fullName>09 - Fishing, Hunting &amp; Trapping</fullName>
            </value>
            <value>
                <fullName>10 - Metal Mining</fullName>
            </value>
            <value>
                <fullName>12 - Coal Mining</fullName>
            </value>
            <value>
                <fullName>13 - Oil and Gas Extraction</fullName>
            </value>
            <value>
                <fullName>14 - Mining &amp; Quarrying of Non-metallic Minerals exc. Fuels</fullName>
            </value>
            <value>
                <fullName>15 - Building Construction - General Contractors &amp; Operative Builders</fullName>
            </value>
            <value>
                <fullName>16 - Heavy Construction Other than Building Construction - Contractors</fullName>
            </value>
            <value>
                <fullName>17 - Construction - Special Trade Contractors</fullName>
            </value>
            <value>
                <fullName>20 - Food &amp; Kindred Products</fullName>
            </value>
            <value>
                <fullName>21 - Tobacco products</fullName>
            </value>
            <value>
                <fullName>22 - Textile Mill Products</fullName>
            </value>
            <value>
                <fullName>23 - Apparel &amp; Other Finished Products</fullName>
            </value>
            <value>
                <fullName>24 - Lumber &amp; Wood Products exc. Furniture</fullName>
            </value>
            <value>
                <fullName>25 - Furniture &amp; Fixtures</fullName>
            </value>
            <value>
                <fullName>26 - Paper &amp; Allied Products</fullName>
            </value>
            <value>
                <fullName>27 - Printing, Publishing &amp; Allied Industries</fullName>
            </value>
            <value>
                <fullName>28 - Chemicals &amp; Allied Products</fullName>
            </value>
            <value>
                <fullName>29 - Petroleum Refining &amp; Related Industries</fullName>
            </value>
            <value>
                <fullName>30 - Rubber &amp; Miscellaneous Plastics Products</fullName>
            </value>
            <value>
                <fullName>31 - Leather &amp; Leather Products</fullName>
            </value>
            <value>
                <fullName>32 - Stone, Clay, Glass &amp; Concrete Products</fullName>
            </value>
            <value>
                <fullName>33 - Primary Metal Industries</fullName>
            </value>
            <value>
                <fullName>34 - Fabricated Metal Products exc. Machinery &amp; Transportation Equipment</fullName>
            </value>
            <value>
                <fullName>35 - Industrial &amp; Commercial Machinery &amp; Computer Equipment</fullName>
            </value>
            <value>
                <fullName>36 - Electronic &amp; Other Electrical Equipment &amp; Components exc. Computer Equipment</fullName>
            </value>
            <value>
                <fullName>37 - Transportation Equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>