unpackaged/main/default/objects/Contact/fields/SIC_Codes__c.field-meta.xml
<CustomField>
    <fullName>SIC_Codes__c</fullName>
    <label>SIC Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SIC_Code</valueSetName>
    </valueSet>
</CustomField>