unpackaged/main/default/objects/Contact/fields/Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Timeframe__c</fullName>
    <label>Timeframe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-9</fullName>
            </value>
            <value>
                <fullName>10-19</fullName>
            </value>
            <value>
                <fullName>20-49</fullName>
            </value>
            <value>
                <fullName>50-99</fullName>
            </value>
            <value>
                <fullName>100-199</fullName>
            </value>
            <value>
                <fullName>200-499</fullName>
            </value>
            <value>
                <fullName>500-999</fullName>
            </value>
            <value>
                <fullName>1000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>