unpackaged/main/default/objects/Contact/validationRules/Practice_and_Group_Mandatory_on_Resource.validationRule-meta.xml
<ValidationRule>
    <fullName>Practice_and_Group_Mandatory_on_Resource</fullName>
    <active>false</active>
    <errorConditionFormula>RecordType.Name = "PSA Resource" &amp;&amp; (ISBLANK(pse__Practice__c) || ISBLANK( pse__Group__c ))</errorConditionFormula>
    <errorMessage>If Contact is a Resource please populate Practice and Group Fields</errorMessage>
</ValidationRule>