unpackaged/main/default/objects/Contact/validationRules/Region_and_Group_Mandatory_on_Resource.validationRule-meta.xml
<ValidationRule>
    <fullName>Region_and_Group_Mandatory_on_Resource</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.Name = "PSA Resource" &amp;&amp; (ISBLANK( pse__Region__c ) || ISBLANK( pse__Group__c ))</errorConditionFormula>
    <errorMessage>If Contact is a Resource please populate Region and Group Fields.</errorMessage>
</ValidationRule>