unpackaged/main/default/objects/Contact/listViews/JVS_All_Contacts.listView-meta.xml
<ListView>
    <fullName>JVS_All_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Active__c</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MyRegion__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>JVS All Contacts</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Services_Jeeves</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>